# Pacman_Project

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  ToDo.md
.github/workflows/: ci-build.yml  cmake-single-platform.yml
app/: CMakeLists.txt
app/factory/: ConcreteFactory.cpp  ConcreteFactory.h
app/game/: Game.cpp  Game.h  main.cpp
app/states/: AppContext.h  GameOverState.cpp  GameOverState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
app/ui/: Hud.cpp  Hud.h
app/views/: CoinView.cpp  CoinView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  PacManView.cpp  PacManView.h  View.cpp  View.h  ViewRegistry.cpp  ViewRegistry.h  WallView.cpp  WallView.h
assets/data/: highscores.txt
docs/: DesignOverview.md
logic/: CMakeLists.txt
logic/camera/: Camera.cpp  Camera.h
logic/entities/: Coin.cpp  Coin.h  Direction.h  Entity.cpp  Entity.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  PacMan.cpp  PacMan.h  Wall.h
logic/factory/: AbstractFactory.h
logic/observer/: Event.h  Observer.h  Subject.cpp  Subject.h
logic/score/: Score.cpp  Score.h
logic/utils/: Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h
logic/world/: TileMap.h  World.cpp  World.h
tests/: CMakeLists.txt  test_event_payloads.cpp  test_observer.cpp  test_statemanager.cpp  test_stopwatch.cpp  test_world.cpp
